fix font size on mobile, clear previous results on search

--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -22,7 +22,7 @@ font-family: 'Open Sans', sans-serif;
 li{
   list-style: none;
   text-align: center;
-  font-size: 1vw;
+  font-size: 1.5em;
 }
 
 
@@ -48,7 +48,7 @@ li{
   font-weight: 700;
   text-align: center;
   padding: 15px;
-  font-size: 1.2vw;
+  font-size: 1.3em;
 }
 
 #flex-row{
